// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carcount comp. can update via props 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="counter"
      classNames="count"
      key="50"
      timeout={
        Object {
          "enter": 1000,
          "exit": 1000,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        50
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`Carcount comp. match le snapshot 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="counter"
      classNames="count"
      key="10"
      timeout={
        Object {
          "enter": 1000,
          "exit": 1000,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        10
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;
